@@ -1,0 +1,12 @@
+0 0.0418716 0.0244798
+1 0.130084 0.030404
+2 0.169987 0.00489234
+3 0.157396 0.0154767
+4 0.135904 0.011422
+5 0.106615 0.0145644
+6 0.0775785 0.0122655
+7 0.0536776 0.0141696
+8 0.0368797 0.00692106
+9 0.0260665 0.0085503
+10 0.0190257 0.00324373
+11 0.0147209 0.00524462
